clean PR